k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: work-clock-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: work-clock
  template:
    metadata:
      labels:
        app: work-clock
    spec:
      containers:
        - image: prporso/work-clock:test #to be changed
          name: work-clock
          ports:
            - containerPort: 8080
              name: server

---

apiVersion: v1
kind: Service
metadata:
  name: work-clock
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: work-clock
