k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workclock-redis-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workclock-redis
  template:
    metadata:
      labels:
        app: workclock-redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379


---

apiVersion: v1
kind: Service
metadata:
  name: workclock-redis-service
spec:
  selector:
    app: workclock-redis
  ports:
    - protocol: TCP
      port: 6379
  type: ClusterIP
