k8s/socket.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workclock-socket-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workclock-socket
  template:
    metadata:
      labels:
        app: workclock-socket
    spec:
      containers:
      - name: workclock-socket
        image: janezs12/workclock-socket-v3
        ports:
        - containerPort: 4000
          name: socket
        readinessProbe:
          httpGet:
            path: /heartbeat
            port: socket
          initialDelaySeconds: 50
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
            httpGet:
              path: /heartbeat-redis
              port: socket
            initialDelaySeconds: 50
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: workclock-socket-service
spec:
  type: ClusterIP
  selector:
    app: workclock-socket
  ports:
    - protocol: TCP
      port: 4000
