k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workclock-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /core(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: work-clock
            port:
              number: 3000
      - path: /services(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: work-clock-services
            port:
              number: 5000
      - path: /socket(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: workclock-socket-service
            port:
              number: 4000
